upgraded jupman to latest 3.2+, removed kruft, added david-prova.ipynb

--- a/david-prova.ipynb
+++ b/david-prova.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "nbsphinx": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "#jupman-preprocess"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "nbsphinx": "hidden"
@@ -14,6 +25,68 @@
     "}\n",
     "\n",
     "to enable/disable solutions view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x = 5\n",
+    "\n",
+    "# write here\n",
+    "\n",
+    "print(x*x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gimme a solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a solution\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SOLUTION\n",
+    "\n",
+    "print(\"This is a solution\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**QUESTION**: How much is 2 + 2?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**ANSWER**: 4"
    ]
   },
   {
@@ -973,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
